# CDAScorer

./: .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.txt  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
CDAScorer/: __init__.py  __main__.py  cdametadata.py  cdascorer_gui.py  cdascorer_gui_windows.py  cli.py  tkinterwindow.py  viewer.py
cdascorer/: __init__.py  __main__.py  cdametadata.py  cdascorer_gui.py  cli.py  rescore.py  rescore_gui.py  viewer.py
docs/: Gemfile  _config.yml
docs/_data/: navigation.yml
docs/_docs/: 01-tutorial-introduction.md  02-preparing-workspace.md  03-generate-metadata.md  04-recording-coordinates.md  05-fitting-scores.md  06-query-and-rescore.md
docs/_pages/: install.md  mac_tutorial.html  mac_tutorial.md  mac_tutorial.qmd  scoring_meeting.md  tutorial.html  tutorial.md  tutorials.md  windows_tutorial.html  windows_tutorial.md  windows_tutorial.qmd
docs/_site/: feed.xml
scoreprep/: Img_MD5Hash.py  allocations.py  movefiles.py  tojpg.py
scripts/: CDAScorer-run  CDAScorer-test  cdascorer  cdascorer-test  cdascorer-view  cdascorer-windows-test  cdascorer-windows-test.py  cdascorer-windows.py  rescore.py  rescore_gui.py
tests/: cdametadata_test.py  mainwindow_test.py  test_cdametadata.py  test_cli.py  test_gui_helpers.py  test_rescore.py  test_viewer.py
