[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdascorer"
version = "0.1.0"
description = "Cell Death Area Data Collection"
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [
  { name = "Joshua Williams", email = "joshuandwilliams@outlook.com" }
]
urls = { "Homepage" = "https://github.com/joshuandwilliams/CDAScorer" }
requires-python = ">=3.9"
dependencies = [
  "pandas",
  "Pillow",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
]

[project.scripts]
cdascorer = "cdascorer.cli:main"
cdascorer-view = "cdascorer.viewer:main"
cdascorer-rescore = "cdascorer.rescore:main"

[tool.setuptools.packages.find]
include = ["cdascorer", "cdascorer.*"]

[tool.setuptools.package-data]
"cdascorer" = ["data/*.jpg"]

[tool.coverage.run]
source = ["cdascorer"]